--- a/game.html
+++ b/game.html
@@ -16,6 +16,13 @@
     <script src="./models/moveable-object.class.js"></script>
     <script src="./models/background-object.class.js"></script>
     <script src="./models/character.class.js"></script>
+    <script src="./models/squid.class.js"></script>
+    <script src="./models/spirit.class.js"></script>
+    <script src="./models/spider.class.js"></script>
+    <script src="./models/spinner.class.js"></script>
+    <script src="./models/plant.class.js"></script>
+    <script src="./models/candle.class.js"></script>
+    <script src="./models/endboss.class.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/level.class.js"></script>
