--- a/game.html
+++ b/game.html
@@ -65,7 +65,7 @@
                             d="M208,144H136V95.19a40,40,0,1,0-16,0V144H48a16,16,0,0,0-16,16v48a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V160A16,16,0,0,0,208,144ZM104,56a24,24,0,1,1,24,24A24,24,0,0,1,104,56ZM208,208H48V160H208v48Zm-40-96h32a8,8,0,0,1,0,16H168a8,8,0,0,1,0-16Z">
                         </path>
                     </svg>
-                    <span class="tooltip-text">Control</span>
+                    <span class="tooltip-text">Guide</span>
                 </button>
             </div>
         </div>
@@ -78,7 +78,7 @@
                     <div class="progress-icon-health">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
                             <path
-                                d="M178,36c-20.09,0-37.92,7.93-50,21.56C115.92,43.93,98.09,36,78,36a66.08,66.08,0,0,0-66,66c0,72.34,105.81,130.14,110.31,132.57a12,12,0,0,0,11.38,0C138.19,232.14,244,174.34,244,102A66.08,66.08,0,0,0,178,36Zm-5.49,142.36A328.69,328.69,0,0,1,128,210.16a328.69,328.69,0,0,1-44.51-31.8C61.82,159.77,36,131.42,36,102A42,42,0,0,1,78,60c17.8,0,32.7,9.4,38.89,24.54a12,12,0,0,0,22.22,0C145.3,69.4,160.2,60,178,60a42,42,0,0,1,42,42C220,131.42,194.18,159.77,172.51,178.36Z">
+                                d="M178,40c-20.65,0-38.73,8.88-50,23.89C116.73,48.88,98.65,40,78,40a62.07,62.07,0,0,0-62,62c0,70,103.79,126.66,108.21,129a8,8,0,0,0,7.58,0C136.21,228.66,240,172,240,102A62.07,62.07,0,0,0,178,40ZM128,214.8C109.74,204.16,32,155.69,32,102A46.06,46.06,0,0,1,78,56c19.45,0,35.78,10.36,42.6,27a8,8,0,0,0,14.8,0c6.82-16.67,23.15-27,42.6-27a46.06,46.06,0,0,1,46,46C224,155.61,146.24,204.15,128,214.8Z">
                             </path>
                         </svg>
                     </div>
@@ -90,7 +90,7 @@
                     <div class="progress-icon-bomb">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
                             <path
-                                d="M244,28a12,12,0,0,0-12,12A48.71,48.71,0,0,1,228.67,56C224.23,66.64,217.43,68,212,68c-8.81,0-14.91-8.5-23.91-22.49C178.5,30.58,166.55,12,144,12c-18.14,0-32,9.78-39.14,27.54A68.26,68.26,0,0,0,101.27,52H88A20,20,0,0,0,68,72v7.18A92,92,0,0,0,112,252h1.66A92,92,0,0,0,156,79.18V72a20,20,0,0,0-20-20H125.93a40.89,40.89,0,0,1,1.4-4c4.44-10.62,11.24-12,16.67-12,8.81,0,14.91,8.5,23.91,22.49C177.5,73.42,189.45,92,212,92c18.14,0,32-9.78,39.14-27.54A71.91,71.91,0,0,0,256,40,12,12,0,0,0,244,28ZM139.2,97.65a68,68,0,1,1-54.4,0,12,12,0,0,0,7.2-11V76h19.5c.17,0,.33,0,.5,0s.34,0,.51,0H132V86.66A12,12,0,0,0,139.2,97.65ZM111.45,201.76A12,12,0,0,1,100,210.17a12.2,12.2,0,0,1-3.6-.55A51.79,51.79,0,0,1,60,160a12,12,0,0,1,24,0,27.89,27.89,0,0,0,19.6,26.72A12,12,0,0,1,111.45,201.76Z">
+                                d="M248,32h0a8,8,0,0,0-8,8,52.66,52.66,0,0,1-3.57,17.39C232.38,67.22,225.7,72,216,72c-11.06,0-18.85-9.76-29.49-24.65C176,32.66,164.12,16,144,16c-16.39,0-29,8.89-35.43,25a66.07,66.07,0,0,0-3.9,15H88A16,16,0,0,0,72,72v9.59A88,88,0,0,0,112,248h1.59A88,88,0,0,0,152,81.59V72a16,16,0,0,0-16-16H120.88a46.76,46.76,0,0,1,2.69-9.37C127.62,36.78,134.3,32,144,32c11.06,0,18.85,9.76,29.49,24.65C184,71.34,195.88,88,216,88c16.39,0,29-8.89,35.43-25A68.69,68.69,0,0,0,256,40,8,8,0,0,0,248,32ZM140.8,94a72,72,0,1,1-57.6,0A8,8,0,0,0,88,86.66V72h48V86.66A8,8,0,0,0,140.8,94ZM111.89,209.32A8,8,0,0,1,104,216a8.52,8.52,0,0,1-1.33-.11,57.5,57.5,0,0,1-46.57-46.57,8,8,0,1,1,15.78-2.64,41.29,41.29,0,0,0,33.43,33.43A8,8,0,0,1,111.89,209.32Z">
                             </path>
                         </svg>
                     </div>
@@ -123,7 +123,7 @@
                             d="M208,144H136V95.19a40,40,0,1,0-16,0V144H48a16,16,0,0,0-16,16v48a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V160A16,16,0,0,0,208,144ZM104,56a24,24,0,1,1,24,24A24,24,0,0,1,104,56ZM208,208H48V160H208v48Zm-40-96h32a8,8,0,0,1,0,16H168a8,8,0,0,1,0-16Z">
                         </path>
                     </svg>
-                    Control
+                    Game Play
                 </h2>
                 <button class="btn btn-circle" onclick="closeInfoGuide()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
@@ -134,7 +134,13 @@
                 </button>
             </div>
             <div class="tabs">
-                <button class="btn tab-btn active" onclick="switchTab(event, 'desktop-controls')">
+                <button class="btn tab-btn active" onclick="switchTab(event, 'game-story')">
+                    Chronicle
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path d="M232,128A104,104,0,1,1,128,24,104.13,104.13,0,0,1,232,128Z"></path>
+                    </svg>
+                </button>
+                <button class="btn tab-btn" onclick="switchTab(event, 'desktop-controls')">
                     Desktop
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
                         <path d="M232,128A104,104,0,1,1,128,24,104.13,104.13,0,0,1,232,128Z"></path>
@@ -146,8 +152,41 @@
                         <path d="M232,128A104,104,0,1,1,128,24,104.13,104.13,0,0,1,232,128Z"></path>
                     </svg>
                 </button>
-                <div class="tab-content-controls">
-                    <section id="desktop-controls" class="modal-content">
+                <div class="tab-content">
+                    <section id="game-story" class="modal-content">
+                        <div class="modal-guide-item">
+                            <h3>Brizzle Bash</h3>
+                            <div class="article">
+                                <p>
+                                    Darkness has crept into the corners of the world, leaving only faint glimmers of hope. At the center of this struggle is <span
+                                        class="article-accent">Oswald van Bristlewick</span>, lovingly called <span class="article-accent">Brizzly</span>, the unshakeable defender
+                                    of Moustacheshire. With relentless courage and a will of steel, <span class="article-accent">Brizzly</span> stands as the last line of defense
+                                    against the looming threat of the <span class="article-accent">Shadow Monsters</span>.
+                                </p>
+                                <p>
+                                    Emerging from the depths of the Twilight Forest, the <span class="article-accent">Shadow Monsters</span> spread terror across the land.
+                                    Townsfolk tremble at the thought of their ghostly forms and merciless attacks. But <span class="article-accent">Brizzly</span>, with unmatched
+                                    agility, combat expertise, and an unwavering sense of justice, refuses to let darkness claim the world. He is Moustacheshire’s final hope to
+                                    restore peace.
+                                </p>
+                            </div>
+                            <h3>All Characters</h3>
+                            <div class="carousel-container">
+                                <div class="carousel" id="carousel"></div>
+                                <button class="btn carousel-prev" onclick="moveSlide(-1)">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                        <path d="M165.66,202.34a8,8,0,0,1-11.32,11.32l-80-80a8,8,0,0,1,0-11.32l80-80a8,8,0,0,1,11.32,11.32L91.31,128Z"></path>
+                                    </svg>
+                                </button>
+                                <button class="btn carousel-next" onclick="moveSlide(1)">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                                        <path d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"></path>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </section>
+                    <section id="desktop-controls" class="modal-content hidden">
                         <div class="modal-guide-item">
                             <h3>Movement</h3>
                             <div class="kbd-control">
@@ -173,10 +212,10 @@
                                     <kbd>J</kbd> - <span>Press the J key to unleash a quick, close-range power punch.</span>
                                 </div>
                                 <div class="kbd-control-row">
-                                    <kbd>K</kbd> - <span>Press the K key to fire a precise, long-range gunshot.</span>
+                                    <kbd>K</kbd> - <span>Press the K key to launch a long-range attack with a spiky iron ball.</span>
                                 </div>
                                 <div class="kbd-control-row">
-                                    <kbd>L</kbd> - <span>Press the P key to activate a special attack with devastating power.</span>
+                                    <kbd>L</kbd> - <span>Press the L key to launch a long-range attack with a devastating bomb.</span>
                                 </div>
                             </div>
                         </div>
@@ -240,10 +279,10 @@
                                     <kbd>X</kbd> - <span>Press the J key to unleash a quick, close-range power punch.</span>
                                 </div>
                                 <div class="kbd-control-row">
-                                    <kbd>X</kbd> - <span>Press the K key to fire a precise, long-range gunshot.</span>
+                                    <kbd>X</kbd> - <span>Press the K key to launch a long-range attack with a spiky iron ball.</span>
                                 </div>
                                 <div class="kbd-control-row">
-                                    <kbd>X</kbd> - <span>Press the P key to activate a special attack with devastating power.</span>
+                                    <kbd>X</kbd> - <span>Press the L key to launch a long-range attack with a devastating bomb.</span>
                                 </div>
                             </div>
                         </div>
@@ -282,7 +321,7 @@
                                                 d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216ZM112,96v64a8,8,0,0,1-16,0V96a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V96a8,8,0,0,1,16,0Z">
                                             </path>
                                         </svg>
-                                    </kbd> - <span>Press Esc to pause the game and access the menu.</span>
+                                    </kbd> - <span>Press the button to break or return to the game.</span>
                                 </div>
                             </div>
                         </div>
@@ -291,7 +330,6 @@
             </div>
         </div>
     </section>
-
 
     <section id="game-settings-modal" class="modal hidden">
         <div class="modal-container">
