relocated carousel logic
update includes:
- extra JS file which handles the logic for the carousel,
- modified the transition of the images

--- a/game.html
+++ b/game.html
@@ -28,8 +28,6 @@
     <script src="./models/level.class.js"></script>
     <script src="./levels/level-01.js"></script>
     <script src="./js/game.js"></script>
-    <script src="./js/script.js"></script>
-
 </head>
 
 <body onload="initGame()">
@@ -389,6 +387,8 @@
         <div class="footer-inner"></div>
     </footer> -->
 
+    <script src="./js/script.js"></script>
+    <script src="./js/carousel.js"></script>
 </body>
 
 </html>
