--- a/game.html
+++ b/game.html
@@ -13,18 +13,24 @@
     <link rel="stylesheet" href="./styles/style.css">
 
 
-    <script src="./models/moveable-object.class.js"></script>
-    <script src="./models/background-object.class.js"></script>
+    <script src="./models/objects-moveable.class.js"></script>
+    <script src="./models/objects-background.class.js"></script>
+
     <script src="./models/character.class.js"></script>
-    <script src="./models/squid.class.js"></script>
-    <script src="./models/spirit.class.js"></script>
-    <script src="./models/spider.class.js"></script>
-    <script src="./models/spinner.class.js"></script>
-    <script src="./models/plant.class.js"></script>
-    <script src="./models/candle.class.js"></script>
-    <script src="./models/endboss.class.js"></script>
+    <script src="./models/enemy-candle.class.js"></script>
+    <script src="./models/enemy-endboss.class.js"></script>
+    <script src="./models/enemy-plant.class.js"></script>
+    <script src="./models/enemy-spider.class.js"></script>
+    <script src="./models/enemy-spinner.class.js"></script>
+    <script src="./models/enemy-spirit.class.js"></script>
+    <script src="./models/enemy-squid.class.js"></script>
+
     <script src="./models/world.class.js"></script>
-    <script src="./models/throwable-object.class.js"></script>
+
+    <script src="./models/objects-throwable.class.js"></script>
+    <script src="./models/objects-health.class.js"></script>
+    <script src="./models/objects-bomb.class.js"></script>
+
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/level.class.js"></script>
     <script src="./levels/level-01.js"></script>
