--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/assets.css">
+    <link rel="stylesheet" href="./styles/landscape.css">
     <link rel="stylesheet" href="./styles/style.css">
 
 
@@ -30,6 +31,7 @@
     <script src="./models/objects-throwable.class.js"></script>
     <script src="./models/objects-health.class.js"></script>
     <script src="./models/objects-bomb.class.js"></script>
+    <script src="./models/objects-throwError.class.js"></script>
 
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/level.class.js"></script>
@@ -388,6 +390,21 @@
 
 
 
+    <div id="landscape-modal" class="landscape-modal hidden">
+        <div class="landscape-modal-content">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                <path
+                    d="M176,18H80A22,22,0,0,0,58,40V216a22,22,0,0,0,22,22h96a22,22,0,0,0,22-22V40A22,22,0,0,0,176,18ZM70,62H186V194H70ZM80,30h96a10,10,0,0,1,10,10V50H70V40A10,10,0,0,1,80,30Zm96,196H80a10,10,0,0,1-10-10V206H186v10A10,10,0,0,1,176,226Z">
+                </path>
+            </svg>
+            <h3>Please rotate your device!</h3>
+            <figcaption>This page is best viewed in landscape mode.</figcaption>
+        </div>
+    </div>
+
+
+
+
 
 
     <!-- <footer>
@@ -395,6 +412,7 @@
     </footer> -->
 
     <script src="./js/script.js"></script>
+    <script src="./js/audio.js"></script>
     <script src="./js/carousel.js"></script>
 </body>
 
