--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 
 
+    <script src="./models/objects-drawable.class.js"></script>
     <script src="./models/objects-moveable.class.js"></script>
     <script src="./models/objects-background.class.js"></script>
 
@@ -32,6 +33,7 @@
     <script src="./models/objects-health.class.js"></script>
     <script src="./models/objects-bomb.class.js"></script>
     <script src="./models/objects-throwError.class.js"></script>
+    
 
     <script src="./models/keyboard.class.js"></script>
     <script src="./models/level.class.js"></script>
