added new sounds

--- a/game.html
+++ b/game.html
@@ -123,7 +123,7 @@
     </main>
 
 
-    <section id="info-guide-modal" class="modal hidden">
+    <div id="info-guide-modal" class="modal hidden">
         <div class="modal-container">
             <div class="modal-header">
                 <h2 class="modal-headline">
@@ -144,7 +144,7 @@
             </div>
             <div class="tabs">
                 <button class="btn tab-btn active" onclick="switchTab(event, 'game-story')">
-                    Chronicle
+                    Story
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
                         <path d="M232,128A104,104,0,1,1,128,24,104.13,104.13,0,0,1,232,128Z"></path>
                     </svg>
@@ -338,9 +338,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
-    <section id="game-settings-modal" class="modal hidden">
+    <div id="game-settings-modal" class="modal hidden">
         <div class="modal-container">
             <div class="modal-header">
                 <h2 class="modal-headline">
@@ -388,9 +388,7 @@
                 <p>This feature will be enabled after reload.</p>
             </div>
         </div>
-    </section>
-
-
+    </div>
 
     <div id="landscape-modal" class="landscape-modal hidden">
         <div class="landscape-modal-content">
