--- a/index.html
+++ b/index.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>2S Game</title>
+
+    <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/assets.css">
+    <link rel="stylesheet" href="./styles/intro.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
+
 <body>
-    
+
+    <header>
+        <div class="header-inner">
+            <div class="main-logo">
+                <img class="logo" src="" alt="">
+                <span class="logo-text">
+                    Brizzle Bash
+                </span>
+            </div>
+            <div class="setting-bar">
+                <button id="btn-volume" class="btn tooltip" aria-label="volume-btn" onclick="toggleSound()">
+                    <svg id="btn-volume-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path
+                            d="M155.51,24.81a8,8,0,0,0-8.42.88L77.25,80H32A16,16,0,0,0,16,96v64a16,16,0,0,0,16,16H77.25l69.84,54.31A8,8,0,0,0,160,224V32A8,8,0,0,0,155.51,24.81ZM32,96H72v64H32ZM144,207.64,88,164.09V91.91l56-43.55Zm54-106.08a40,40,0,0,1,0,52.88,8,8,0,0,1-12-10.58,24,24,0,0,0,0-31.72,8,8,0,0,1,12-10.58ZM248,128a79.9,79.9,0,0,1-20.37,53.34,8,8,0,0,1-11.92-10.67,64,64,0,0,0,0-85.33,8,8,0,1,1,11.92-10.67A79.83,79.83,0,0,1,248,128Z">
+                        </path>
+                    </svg>
+                    <span id="btn-volume-tooltip" class="tooltip-text">Sound Off</span>
+                </button>
+            </div>
+        </div>
+    </header>
+
+
+    <main>
+        <div id="intro-container" class="intro-container">
+
+            <div class="glitch-headline">
+                <p class="invisible-text">Brizzle Bash</p>
+                <p class="glitch-animation">Brizzle Bash</p>
+                <p class="glitch-animation">Brizzle Bash</p>
+            </div>
+
+            <div class="intro-buttons">
+                <button class="btn" onclick="showIntro()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path
+                            d="M112,116a12,12,0,1,1-12-12A12,12,0,0,1,112,116Zm44-12a12,12,0,1,0,12,12A12,12,0,0,0,156,104Zm68,16v96a8,8,0,0,1-13.07,6.19l-24.26-19.85L162.4,222.19a8,8,0,0,1-10.13,0L128,202.34l-24.27,19.85a8,8,0,0,1-10.13,0L69.33,202.34,45.07,222.19A8,8,0,0,1,32,216V120a96,96,0,0,1,192,0Zm-16,0a80,80,0,0,0-160,0v79.12l16.27-13.31a8,8,0,0,1,10.13,0l24.27,19.85,24.26-19.85a8,8,0,0,1,10.14,0l24.26,19.85,24.27-19.85a8,8,0,0,1,10.13,0L208,199.12Z">
+                        </path>
+                    </svg>
+                    Read Story
+                </button>
+
+                <a href="./game.html" class="btn btn-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path
+                            d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm48.24-94.78-64-40A8,8,0,0,0,100,88v80a8,8,0,0,0,12.24,6.78l64-40a8,8,0,0,0,0-13.56ZM116,153.57V102.43L156.91,128Z">
+                        </path>
+                    </svg>
+                    Start Game
+                </a>
+            </div>
+        </div>
+
+    </main>
+
+
+    <!-- <footer>
+        <div class="footer-inner"></div>
+    </footer> -->
+
+    <script src="./js/intro.js"></script>
+    <script src="./js/audio.js"></script>
+    <script src="./js/carousel.js"></script>
 </body>
+
 </html>
