--- a/index.html
+++ b/index.html
@@ -4,26 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/img/main/fav.png" type="image/x-icon">
 
-    <title>2S Game</title>
+    <title>Brizzle Bash - Introduction</title>
 
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/assets.css">
-    <link rel="stylesheet" href="./styles/intro.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/intro.css">
 </head>
 
 <body>
 
     <header>
         <div class="header-inner">
-            <div class="main-logo">
-                <img class="logo" src="" alt="">
-                <span class="logo-text">
-                    Brizzle Bash
-                </span>
-            </div>
+            <a href="./index.html" class="main-logo">
+                <img class="logo" src="./assets/img/main/logo.png" alt="Logo">
+            </a>
             <div class="setting-bar">
                 <button id="btn-volume" class="btn tooltip" aria-label="volume-btn" onclick="toggleSound()">
                     <svg id="btn-volume-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
@@ -47,8 +45,16 @@
                 <p class="glitch-animation">Brizzle Bash</p>
             </div>
 
+            <div class="story-container">
+                <img id="story-image" class="story-image" src="./assets/img/carousel/talku-00.png" alt="Brizzly">
+                <figcaption>Light the way, fight the dark.</figcaption>
+                <div class="story-text">
+                    <div id="story" class="story hidden"></div>
+                </div>
+            </div>
+
             <div class="intro-buttons">
-                <button class="btn" onclick="showIntro()">
+                <button id="showIntroButton" class="btn" onclick="showIntro()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
                         <path
                             d="M112,116a12,12,0,1,1-12-12A12,12,0,0,1,112,116Zm44-12a12,12,0,1,0,12,12A12,12,0,0,0,156,104Zm68,16v96a8,8,0,0,1-13.07,6.19l-24.26-19.85L162.4,222.19a8,8,0,0,1-10.13,0L128,202.34l-24.27,19.85a8,8,0,0,1-10.13,0L69.33,202.34,45.07,222.19A8,8,0,0,1,32,216V120a96,96,0,0,1,192,0Zm-16,0a80,80,0,0,0-160,0v79.12l16.27-13.31a8,8,0,0,1,10.13,0l24.27,19.85,24.26-19.85a8,8,0,0,1,10.14,0l24.26,19.85,24.27-19.85a8,8,0,0,1,10.13,0L208,199.12Z">
@@ -56,7 +62,6 @@
                     </svg>
                     Read Story
                 </button>
-
                 <a href="./game.html" class="btn btn-primary">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
                         <path
