--- a/game.html
+++ b/game.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/img/main/fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/main/logo.png" type="image/x-icon">
 
     <title>Brizzle Bash - Game Play</title>
 
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/assets.css">
+    <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/landscape.css">
+    <link rel="stylesheet" href="./styles/modals.css">
     <link rel="stylesheet" href="./styles/style.css">
 
 
@@ -45,7 +47,7 @@
 
     <header>
         <div class="header-inner">
-            <a href="./index.html" class="main-logo">
+            <a href="./index.html">
                 <img class="logo" src="./assets/img/main/logo.png" alt="Logo">
             </a>
             <div class="setting-bar">
@@ -406,13 +408,6 @@
     </div>
 
 
-
-
-
-
-    <!-- <footer>
-        <div class="footer-inner"></div>
-    </footer> -->
 
     <script src="./js/script.js"></script>
     <script src="./js/audio.js"></script>
