--- a/index.html
+++ b/index.html
@@ -60,19 +60,17 @@
                     </svg>
                     Read Story
                 </button>
-                <a href="./game.html" class="btn btn-primary">
+                <button class="btn btn-primary" onclick="startGame()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
                         <path
                             d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm48.24-94.78-64-40A8,8,0,0,0,100,88v80a8,8,0,0,0,12.24,6.78l64-40a8,8,0,0,0,0-13.56ZM116,153.57V102.43L156.91,128Z">
                         </path>
                     </svg>
                     Start Game
-                </a>
+                </button>
             </div>
         </div>
     </main>
-
-    
 
     <footer>
         <div class="footer-inner">
@@ -98,7 +96,7 @@
     <script src="./js/audio.js"></script>
     <script src="./js/carousel.js"></script>
 
-    
+
 </body>
 
 </html>
