--- a/index.html
+++ b/index.html
@@ -293,10 +293,12 @@
                     <span class="logo-txt">Brizzle Bash</span>
                 </div>
             </div>
-            <div class="imprint">
-                <a href="">Impress</a>
-                <span>/</span>
-                <a href="">Privacy</a>                
+            <div class="footer-links">
+                <a href="./legal-notice.html">Legal Notice</a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                    <path d="M136,24V232a8,8,0,0,1-16,0V24a8,8,0,0,1,16,0Z"></path>
+                </svg>
+                <a href="./privacy-policy.html">Privacy Policy</a>                
             </div>
             <figcaption class="made-with-section">
                 <span>made with</span>
