update basic css and html

--- a/game.html
+++ b/game.html
@@ -46,9 +46,10 @@
 <body onload="initGame()">
 
     <header>
-        <div class="header-inner">
-            <a href="./index.html">
-                <img class="logo" src="./assets/img/main/logo.png" alt="Logo">
+        <div id="header-inner-game" class="header-inner">
+            <a href="./index.html" id="main-logo" class="main-logo">
+                <img class="logo-img" src="./assets/img/main/logo.png" alt="Logo">
+                <span>Brizzle Bash</span>
             </a>
             <div class="setting-bar">
                 <button id="btn-volume" class="btn tooltip" aria-label="volume-btn" onclick="toggleSound()">
