--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
     <header>
         <div class="header-inner">
-            <a href="./index.html">
-                <img class="logo" src="./assets/img/main/logo.png" alt="Logo">
+            <a href="./index.html" class="main-logo">
+                <img class="logo-img" src="./assets/img/main/logo.png" alt="Logo">
+                <span>Brizzle Bash</span>
             </a>
             <div class="setting-bar">
                 <button id="btn-volume" class="btn tooltip" aria-label="volume-btn" onclick="toggleSound()">
@@ -294,11 +295,22 @@
                 </div>
             </div>
             <div class="footer-links">
-                <a href="./legal-notice.html">Legal Notice</a>
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
-                    <path d="M136,24V232a8,8,0,0,1-16,0V24a8,8,0,0,1,16,0Z"></path>
-                </svg>
-                <a href="./privacy-policy.html">Privacy Policy</a>                
+                <a href="./legal-notice.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 256 256">
+                        <path
+                            d="M213.66,82.34l-56-56A8,8,0,0,0,152,24H56A16,16,0,0,0,40,40V216a16,16,0,0,0,16,16H200a16,16,0,0,0,16-16V88A8,8,0,0,0,213.66,82.34ZM160,51.31,188.69,80H160ZM200,216H56V40h88V88a8,8,0,0,0,8,8h48V216Zm-32-80a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,136Zm0,32a8,8,0,0,1-8,8H96a8,8,0,0,1,0-16h64A8,8,0,0,1,168,168Z">
+                        </path>
+                    </svg>
+                    Legal Notice
+                </a>
+                <a href="https://github.com/robsc0de/brizzle-bash" target="_blank" rel="noopener noreferrer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path
+                            d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
+                        </path>
+                    </svg>
+                    View on GitHub
+                </a>
             </div>
             <figcaption class="made-with-section">
                 <span>made with</span>
