--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/landscape.css">
     <link rel="stylesheet" href="./styles/modals.css">
+    <link rel="stylesheet" href="./styles/game.css">
     <link rel="stylesheet" href="./styles/style.css">
 
 
