update html and css
update includes:
- basic styling updates

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="footer-main">
                 <div class="footer-logo-wrapper">
                     <img class="footer-logo" src="./assets/img/main/logo.png" alt="Logo">
-                    <span class="logo-txt">Brizzle Bash</span>
+                    <span class="footer-logo-txt">Brizzle Bash</span>
                 </div>
             </div>
             <div class="footer-links">
