--- a/legal-notice.html
+++ b/legal-notice.html
@@ -52,11 +52,13 @@
                 </a>
             </div>
 
+            <hr>
+
             <div class="article-main">
                 <section>
                     <h2>Legal Disclosure</h2>
                     <div class="article-section">
-                        <p>Information in accordance with Section 5 TMG</p>
+                        <p>Information in accordance with § 5 DDG.</p>
                     </div>
                 </section>
 
@@ -118,7 +120,7 @@
             <div class="footer-main">
                 <div class="footer-logo-wrapper">
                     <img class="footer-logo" src="./assets/img/main/logo.png" alt="Logo">
-                    <span class="logo-txt">Brizzle Bash</span>
+                    <span class="footer-logo-txt">Brizzle Bash</span>
                 </div>
             </div>
             <div class="footer-links">
